// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new workout 1`] = `
{
  "WorkoutAdd": {
    "error": "EMPTY",
    "success": "Workout created successfully",
    "workout": {
      "createdBy": {
        "firstName": "User 1 firstName",
      },
      "description": "Hard work",
      "id": "FROZEN-ID",
      "name": "Chest Workout",
      "user": {
        "firstName": "User 1 firstName",
      },
    },
  },
}
`;

exports[`should add a new workout created by other user 1`] = `
{
  "WorkoutAdd": {
    "error": "EMPTY",
    "success": "Workout created successfully",
    "workout": {
      "createdBy": {
        "firstName": "User 2 firstName",
      },
      "description": "Hard work",
      "id": "FROZEN-ID",
      "name": "Chest Workout",
      "user": {
        "firstName": "User 1 firstName",
      },
    },
  },
}
`;
